Fix .gitattributes syntax for Power BI

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-*.pbix linguist-language="Power BI"
-*.pbit linguist-language="Power BI"
+*.pbix linguist-language=PowerBI
+*.pbit linguist-language=PowerBI
 *.pbix linguist-detectable=true
 *.pbit linguist-detectable=true
 *.pbix linguist-vendored=false
